scrollbars fixes

--- a/scss/layout/_core.scss
+++ b/scss/layout/_core.scss
@@ -12,6 +12,10 @@ body {
   text-rendering: optimizeLegibility;
   font-feature-settings: "liga" 0;
 
+  * {
+    @include scrollbar;
+  }
+
   @media print {
     background: transparent;
   }
