--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -128,8 +128,8 @@ Top nav
   border-color: $navbar-border-color;
   position: absolute;
   top: 0;
+  right: 0;
   left: 0;
-  width: 100vw;
   padding: 0 .5rem;
   z-index: $zindex-sticky;
   min-height: $navbar-height;
