--- a/scss/mixins/_mixins.scss
+++ b/scss/mixins/_mixins.scss
@@ -10,31 +10,31 @@
 }
 
 @mixin scrollbar($is-dark: false) {
-  //&::-webkit-scrollbar {
-  //  width: 6px;
-  //  height: 6px;
-  //  transition: .3s background;
-  //}
-  //
-  //&::-webkit-scrollbar-thumb {
-  //  border-radius: 5px;
-  //
-  //  @if ($is-dark) {
-  //    background: transparent;
-  //  } @else {
-  //    background: $gray-400;
-  //  }
-  //}
-  //
-  //&:hover::-webkit-scrollbar-thumb {
-  //  background: $gray-500;
-  //
-  //  @if ($is-dark) {
-  //    background: mix(#fff, $dark, 20%);
-  //  } @else {
-  //    background: $gray-500;
-  //  }
-  //}
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+    transition: .3s background;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+
+    @if ($is-dark) {
+      background: transparent;
+    } @else {
+      background: $gray-400;
+    }
+  }
+
+  &:hover::-webkit-scrollbar-thumb {
+    background: $gray-500;
+
+    @if ($is-dark) {
+      background: mix(#fff, $dark, 20%);
+    } @else {
+      background: $gray-500;
+    }
+  }
 }
 
 @mixin dark {
